# reticuler

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi.yml
archive/2024PNAS/: 2024PNAS.ipynb
archive/2024PNAS/data/fig4/: out1.txt  out2.txt  results_d0.0001.fluxes  results_d0.001.fluxes  results_d0.01.fluxes  results_d0.1.fluxes  results_d0.15.fluxes  results_d0.2.fluxes  results_d0.25.fluxes  results_d0.3.fluxes  results_d0.35.fluxes  results_d0.4.fluxes  results_d0.45.fluxes  results_d0.5.fluxes  results_d0.55.fluxes  results_d0.6.fluxes  results_d0.65.fluxes  results_d0.7.fluxes  results_d0.75.fluxes  results_d0.8.fluxes  results_d0.85.fluxes  results_d0.9.fluxes  results_d0.fluxes  results_d1e-05.fluxes  results_d1e-06.fluxes  results_d1e-07.fluxes  results_d1e-08.fluxes  results_d1e-09.fluxes  script1.edp  script2.edp  script_BT.edp
archive/2024PNAS/data/fig5/: M1000.json
archive/2024PNAS/data/fig6/: M100.json  M14.32.json  area_ST.csv  area_fractures.csv
archive/2024PNAS/data/reticuler_temp/: system.py
archive/growth/testing/test_1.0/: README.md  test_streamline_expansion.py
archive/papers/2022SciRep/laplace/: eta15.json  growth_lap.sh
archive/papers/2022SciRep/laplace_different_eta/: eta00.json  eta03.json  (+17 more)
bash_scripts/: README.md  growth_lap.sh  growth_poi.sh
docs/: README.md  requirements.txt
docs/source/: conf.py  index.rst  modules.rst  reticuler.backward_evolution.rst  reticuler.extending_kernels.rst  reticuler.rst  reticuler.user_interface.rst  reticuler.utilities.rst
src/reticuler/: __init__.py  plot_ret.py  reticulate.py  script.edp  system.py
src/reticuler/backward_evolution/: system_back.py  trimmers.py
src/reticuler/extending_kernels/: __init__.py  extenders.py  pde_solvers.py  script.edp  trajectory_integrators.py
src/reticuler/user_interface/: __init__.py  clip_ret.py  clippers.py  graphics.py  plot_ret.py  reticulate.py  reticulate_back.py  script_ret.py
src/reticuler/utilities/: __init__.py  geometry.py  misc.py  morphers.py
tests/: some_graphics.py  test_bifurcations.py  test_box.py  test_dumper.json  test_dumper.py  test_trajectory.py
tests/others/: BackwardEvolution.py  analytical_finger_trajectory_height5.csv  tests.py
(+487 files in other folders)
